# Poet-s-Pen

./: README.md  pyproject.toml
poetspen/: __main__.py  project_creator.py
templates/: new_project.sh.template
templates/project/: .gitignore-default.template  bootstrap.sh-default.template
templates/project/src/: __main__.py-argparse.template  __main__.py-logging.template
templates/project/tests/: test_something.py-pytest.template
